(fixed) language dropdown positioning and opacity issue - also fixed dark mode nav opacity issue - fixed "Skills" section flex box formatting. space-between works better   with all screen sizes - testing out light mode bg color, plan to add animated clouds

--- a/css.css
+++ b/css.css
@@ -7,28 +7,31 @@
     max-width:1280px;
     border-radius:6px;
     overflow:hidden;
-    opacity: .8;
     background-color: #d0ceba;
 }
 section{
     min-height:25vh;
 }
 #pageWrap.dark{
-    background-color: #162b51;
+    background-color: hsla(219, 57%, 20%, 0.781);
 }
-#nav {
+
+#nav{
     display:flex;
     justify-content: space-between;
     align-items: center;
     font-weight:bold;
     padding-top:15px;
-    background-color:#417B5A;
+    background-color:rgb(65, 123, 90);
     padding:20px;
     box-shadow: 1px 5px 5px #888888;
+    z-index:2;
+    opacity:1;
+    position:sticky;
+    top:0;
 }
 #nav.dark{
-    background-color: #0F1F3D;
-    opacity: 1;
+    background-color: hsla(229, 70%, 21%, 0.993);
 }
 #navName{
     font-size:1.75em;
@@ -61,7 +64,10 @@ section{
     min-width: 150px;
     z-index: 2;
     cursor: pointer;
-    border:1px solid black;
+    border-left:1px solid black;
+    border-right:1px solid black;
+    border-bottom:1px solid black;
+    opacity:1;
     
 }
 .dropdown-content{
@@ -74,7 +80,8 @@ section{
 }
 
 #dropdownContent.dark{
-    background-color: #251ee3dd;
+    /*background-color: hsla(242, 78%, 50%, 1.0);*/
+    background-color: hsla(229, 70%, 21%, 0.993);
 }
 
 #dropdownContent div:hover{
@@ -83,7 +90,6 @@ section{
 #dropdownContent.dark div:hover{
     background-color: #725790;
 }
-
 
 
 #about{
@@ -112,7 +118,7 @@ section{
 
 #skills{
     display:flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -158,8 +164,6 @@ figcaption{
     display:flex;
     flex-direction:column;
     align-items: center;
-    justify-content: flex-end;
-
 }
 .gitUIContainer{
     display:flex;
@@ -192,9 +196,6 @@ h1{
     text-decoration: underline;
     font-family:monospace;
 }
-section{
-    min-height:25vh;
-}
 /*Background Styles and Animations*/
 a{
     text-decoration: none;
@@ -216,10 +217,11 @@ hr.dark{
 
 body{
     height:100%;
-    background: url('imgs/BG-sky-compressed.jpg');
+   /* background: url('imgs/BG-sky-compressed.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center; */
+    background: linear-gradient(to bottom, #60aac7, #B0E0E6);
     position: relative;
     font-family: monospace;
     font-size:1.25em;
